cmake_minimum_required(VERSION 3.3)
project(chatter LANGUAGES CXX)

add_compile_options(-std=c++1z -Wall -Wextra -Wpedantic -Weffc++)

# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")

# set(SOURCE_FILES main.cpp)
# add_executable(CLionHello ${SOURCE_FILES})
# add_executable(foobar foobar.cpp)

# add_subdirectory(olle)
# add_subdirectory(kalle)
